--- a/package.json
+++ b/package.json
@@ -10,12 +10,23 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~45.0.0",
-    "expo-status-bar": "~1.3.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "@react-navigation/core": "^6.2.2",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/stack": "^6.1.1",
+    "code": "^5.2.4",
+    "expo": "~44.0.0",
+    "expo-app-loading": "^2.1.0",
+    "expo-constants": "^13.2.3",
+    "expo-file-system": "^14.1.0",
+    "expo-font": "^10.0.5",
+    "expo-updates": "~0.11.6",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-web": "0.17.1",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
